--- a/index.php/a-propos/contact.html
+++ b/index.php/a-propos/contact.html
@@ -49,18 +49,8 @@ document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.
 var pageTracker = _gat._getTracker("UA-27876611-1");
 pageTracker._initData();
 pageTracker._trackPageview();
-</script>  	<div style="display:none"> 	<div class="grofile-hash-map-87b981aa1b7e39641d3482e638241be9"> 	</div> 	</div> <!-- Piwik --> <script type="text/javascript">
-  var _paq = _paq || [];
-  _paq.push(['trackPageView']);
-  _paq.push(['enableLinkTracking']);
-  (function() {
-    var u="//www.jbmlogic.com/analytics/piwik/";
-    _paq.push(['setTrackerUrl', u+'piwik.php']);
-    _paq.push(['setSiteId', '2']);
-    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-    g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
-  })();
-</script> <!-- End Piwik Code -->  	<script type="text/javascript">
+</script>  	<div style="display:none"> 	<div class="grofile-hash-map-87b981aa1b7e39641d3482e638241be9"> 	</div> 	</div> 
+<script type="text/javascript">
 		window.WPCOM_sharing_counts = {"http:\/\/blogue.jbmlogic.com\/index.php\/a-propos\/contact\/":203};
 	</script> 				<script type='text/javascript' src='./../../js/pzc-comment-reply.min.js'></script> <script type='text/javascript'>
 /* <![CDATA[ */
