--- a/index.php/lemanufacturier/jour-m.html
+++ b/index.php/lemanufacturier/jour-m.html
@@ -49,18 +49,9 @@ document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.
 var pageTracker = _gat._getTracker("UA-27876611-1");
 pageTracker._initData();
 pageTracker._trackPageview();
-</script>  	<div style="display:none"> 	<div class="grofile-hash-map-bdf4f5ce4836e11c838998986dd4003e"> 	</div> 	<div class="grofile-hash-map-7d1f47921a857f7a7e4ed50cc8e3cbe0"> 	</div> 	<div class="grofile-hash-map-88f78cb7539ef382fd4c5d7edf25cf5f"> 	</div> 	<div class="grofile-hash-map-cdad4ba9437875947b6342ad40760051"> 	</div> 	<div class="grofile-hash-map-ed294ece393b3a7183063cf162b36aae"> 	</div> 	</div> <!-- Piwik --> <script type="text/javascript">
-  var _paq = _paq || [];
-  _paq.push(['trackPageView']);
-  _paq.push(['enableLinkTracking']);
-  (function() {
-    var u="//www.jbmlogic.com/analytics/piwik/";
-    _paq.push(['setTrackerUrl', u+'piwik.php']);
-    _paq.push(['setSiteId', '2']);
-    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
-    g.type='text/javascript'; g.async=true; g.defer=true; g.src=u+'piwik.js'; s.parentNode.insertBefore(g,s);
-  })();
-</script> <!-- End Piwik Code -->  	<script type="text/javascript">
+</script>  	<div style="display:none"> 	<div class="grofile-hash-map-bdf4f5ce4836e11c838998986dd4003e"> 	</div> 	<div class="grofile-hash-map-7d1f47921a857f7a7e4ed50cc8e3cbe0"> 	</div> 	<div class="grofile-hash-map-88f78cb7539ef382fd4c5d7edf25cf5f"> 	</div> 	<div class="grofile-hash-map-cdad4ba9437875947b6342ad40760051"> 	</div> 	<div class="grofile-hash-map-ed294ece393b3a7183063cf162b36aae"> 	</div> 	</div> 
+
+<script type="text/javascript">
 		window.WPCOM_sharing_counts = {"http:\/\/blogue.jbmlogic.com\/index.php\/lemanufacturier\/jour-m\/":1247};
 	</script> 				<script type='text/javascript' src='./../../js/1h6-comment-reply.min.js'></script> <script type='text/javascript'>
 /* <![CDATA[ */
